# RESCOL

./: AntColonySystem.cpp  AntColonySystem.h  AntSystem.cpp  CMakeLists.txt  ElitistSystem.cpp  ElitistSystem2.cpp  Main.cpp  MinMax.cpp  README.md  USER.txt  aco.cpp  aco.h  config.h  graph.cpp  graph.h  helpers.cpp  helpers.h  instance_reader.cpp
Experimentación/: ejecutar.sh  ejecutar_30.sh
Experimentación/120/: ejecutar_120.sh
Experimentación/30/: ejecutar_30.sh
Experimentación/60/: ejecutar_60.sh
Experimentación/90/: ejecutar_90.sh
Experimentación/CN/120/: ejecutar.sh
Experimentación/CN/180/: ejecutar.sh
Experimentación/CN/30/: ejecutar.sh
Experimentación/CN/300/: ejecutar.sh
Experimentación/CN/60/: ejecutar.sh
Experimentación/CN/600/: ejecutar.sh
Experimentación/CN/600_3epocas/: ejecutar.sh
Experimentación/CN/90/: ejecutar.sh
Experimentación/QN/120/: ejecutar.sh  ejecutar_120.sh
Experimentación/QN/180/: ejecutar.sh
Experimentación/QN/30/: ejecutar.sh
Experimentación/QN/300/: ejecutar.sh
Experimentación/QN/60/: ejecutar.sh  ejecutar_60.sh
Experimentación/QN/90/: ejecutar.sh  (+1 more)
Instancias/: CasoRealMediano.txt  Seg_0_quinta_normal.txt  seg_7.txt
Instancias/CN/: Seg_CN.txt
Instancias/QN/: Seg_QN.txt
Instancias/test/: L00.txt  L01.txt
Instancias/test00/: S00.txt
Visualizador_grafico/: codigo.html  resultados.txt
irace_test/: irace.Rdata  parametros.txt  scenario.txt  target_runner.sh
prueba_automatizada/: test_de_prueba.sh
utils/: VisualizadorCamiones.py  Visualizador_test_2.py
visualizaciones_camiones/: posiciones.json
(+1169 files in other folders)
